src/parser/Python3Parser.java
package com.clp.project.parser;

// Generated from src/Python3Parser.g4 by ANTLR 4.13.1
import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue" })
public class Python3Parser extends Python3ParserBase {
    static {
        RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int INDENT = 1,
            DEDENT = 2,
            STRING = 3,
            NUMBER = 4,
            AND = 5,
            AS = 6,
            DEF = 7,
            ELIF = 8,
            ELSE = 9,
            FALSE = 10,
            FOR = 11,
            FROM = 12,
            IF = 13,
            IMPORT = 14,
            IN = 15,
            IS = 16,
            NONE = 17,
            NOT = 18,
            OR = 19,
            RETURN = 20,
            TRUE = 21,
            UNDERSCORE = 22,
            WHILE = 23,
            NEWLINE = 24,
            NAME = 25,
            DECIMAL_INTEGER = 26,
            FLOAT_NUMBER = 27,
            DOT = 28,
            ELLIPSIS = 29,
            STAR = 30,
            OPEN_PAREN = 31,
            CLOSE_PAREN = 32,
            COMMA = 33,
            COLON = 34,
            SEMI_COLON = 35,
            POWER = 36,
            ASSIGN = 37,
            OPEN_BRACK = 38,
            CLOSE_BRACK = 39,
            OR_OP = 40,
            XOR = 41,
            AND_OP = 42,
            LEFT_SHIFT = 43,
            RIGHT_SHIFT = 44,
            ADD = 45,
            MINUS = 46,
            DIV = 47,
            MOD = 48,
            IDIV = 49,
            NOT_OP = 50,
            OPEN_BRACE = 51,
            CLOSE_BRACE = 52,
            LESS_THAN = 53,
            GREATER_THAN = 54,
            EQUALS = 55,
            GT_EQ = 56,
            LT_EQ = 57,
            NOT_EQ_1 = 58,
            NOT_EQ_2 = 59,
            AT = 60,
            ARROW = 61,
            ADD_ASSIGN = 62,
            SUB_ASSIGN = 63,
            MULT_ASSIGN = 64,
            AT_ASSIGN = 65,
            DIV_ASSIGN = 66,
            MOD_ASSIGN = 67,
            AND_ASSIGN = 68,
            OR_ASSIGN = 69,
            XOR_ASSIGN = 70,
            LEFT_SHIFT_ASSIGN = 71,
            RIGHT_SHIFT_ASSIGN = 72,
            POWER_ASSIGN = 73,
            IDIV_ASSIGN = 74,
            SKIP_ = 75,
            UNKNOWN_CHAR = 76;
    public static final int RULE_root = 0,
            RULE_simple_stmts = 1,
            RULE_compound_stmt = 2,
            RULE_simple_stmt = 3,
            RULE_assignment = 4,
            RULE_return_stmt = 5,
            RULE_import_stm = 6,
            RULE_dotted_name = 7,
            RULE_funcdef = 8,
            RULE_paramlist = 9,
            RULE_paramdef = 10,
            RULE_augassign = 11,
            RULE_if_stmt = 12,
            RULE_while_stmt = 13,
            RULE_for_stmt = 14,
            RULE_block = 15,
            RULE_comp_op = 16,
            RULE_expr = 17,
            RULE_atom = 18,
            RULE_testlist_comp = 19,
            RULE_trailer = 20,
            RULE_exprlist = 21,
            RULE_arglist = 22,
            RULE_argument = 23,
            RULE_comp_iter = 24,
            RULE_comp_for = 25,
            RULE_comp_if = 26;

    private static String[] makeRuleNames() {
        return new String[] {
                "root",
                "simple_stmts",
                "compound_stmt",
                "simple_stmt",
                "assignment",
                "return_stmt",
                "import_stm",
                "dotted_name",
                "funcdef",
                "paramlist",
                "paramdef",
                "augassign",
                "if_stmt",
                "while_stmt",
                "for_stmt",
                "block",
                "comp_op",
                "expr",
                "atom",
                "testlist_comp",
                "trailer",
                "exprlist",
                "arglist",
                "argument",
                "comp_iter",
                "comp_for",
                "comp_if"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {
                null,
                null,
                null,
                null,
                null,
                "'and'",
                "'as'",
                "'def'",
                "'elif'",
                "'else'",
                "'False'",
                "'for'",
                "'from'",
                "'if'",
                "'import'",
                "'in'",
                "'is'",
                "'None'",
                "'not'",
                "'or'",
                "'return'",
                "'True'",
                "'_'",
                "'while'",
                null,
                null,
                null,
                null,
                "'.'",
                "'...'",
                "'*'",
                "'('",
                "')'",
                "','",
                "':'",
                "';'",
                "'**'",
                "'='",
                "'['",
                "']'",
                "'|'",
                "'^'",
                "'&'",
                "'<<'",
                "'>>'",
                "'+'",
                "'-'",
                "'/'",
                "'%'",
                "'//'",
                "'~'",
                "'{'",
                "'}'",
                "'<'",
                "'>'",
                "'=='",
                "'>='",
                "'<='",
                "'<>'",
                "'!='",
                "'@'",
                "'->'",
                "'+='",
                "'-='",
                "'*='",
                "'@='",
                "'/='",
                "'%='",
                "'&='",
                "'|='",
                "'^='",
                "'<<='",
                "'>>='",
                "'**='",
                "'//='"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[] {
                null,
                "INDENT",
                "DEDENT",
                "STRING",
                "NUMBER",
                "AND",
                "AS",
                "DEF",
                "ELIF",
                "ELSE",
                "FALSE",
                "FOR",
                "FROM",
                "IF",
                "IMPORT",
                "IN",
                "IS",
                "NONE",
                "NOT",
                "OR",
                "RETURN",
                "TRUE",
                "UNDERSCORE",
                "WHILE",
                "NEWLINE",
                "NAME",
                "DECIMAL_INTEGER",
                "FLOAT_NUMBER",
                "DOT",
                "ELLIPSIS",
                "STAR",
                "OPEN_PAREN",
                "CLOSE_PAREN",
                "COMMA",
                "COLON",
                "SEMI_COLON",
                "POWER",
                "ASSIGN",
                "OPEN_BRACK",
                "CLOSE_BRACK",
                "OR_OP",
                "XOR",
                "AND_OP",
                "LEFT_SHIFT",
                "RIGHT_SHIFT",
                "ADD",
                "MINUS",
                "DIV",
                "MOD",
                "IDIV",
                "NOT_OP",
                "OPEN_BRACE",
                "CLOSE_BRACE",
                "LESS_THAN",
                "GREATER_THAN",
                "EQUALS",
                "GT_EQ",
                "LT_EQ",
                "NOT_EQ_1",
                "NOT_EQ_2",
                "AT",
                "ARROW",
                "ADD_ASSIGN",
                "SUB_ASSIGN",
                "MULT_ASSIGN",
                "AT_ASSIGN",
                "DIV_ASSIGN",
                "MOD_ASSIGN",
                "AND_ASSIGN",
                "OR_ASSIGN",
                "XOR_ASSIGN",
                "LEFT_SHIFT_ASSIGN",
                "RIGHT_SHIFT_ASSIGN",
                "POWER_ASSIGN",
                "IDIV_ASSIGN",
                "SKIP_",
                "UNKNOWN_CHAR"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Python3Parser.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public Python3Parser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RootContext extends ParserRuleContext {
        public TerminalNode EOF() {
            return getToken(Python3Parser.EOF, 0);
        }

        public List<TerminalNode> NEWLINE() {
            return getTokens(Python3Parser.NEWLINE);
        }

        public TerminalNode NEWLINE(int i) {
            return getToken(Python3Parser.NEWLINE, i);
        }

        public List<Simple_stmtsContext> simple_stmts() {
            return getRuleContexts(Simple_stmtsContext.class);
        }

        public Simple_stmtsContext simple_stmts(int i) {
            return getRuleContext(Simple_stmtsContext.class, i);
        }

        public List<Compound_stmtContext> compound_stmt() {
            return getRuleContexts(Compound_stmtContext.class);
        }

        public Compound_stmtContext compound_stmt(int i) {
            return getRuleContext(Compound_stmtContext.class, i);
        }

        public RootContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_root;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).enterRoot(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).exitRoot(this);
        }
    }

    public final RootContext root() throws RecognitionException {
        RootContext _localctx = new RootContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_root);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(57);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == NEWLINE) {
                    {
                        {
                            setState(54);
                            match(NEWLINE);
                        }
                    }
                    setState(59);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(64);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3483530444569752L) != 0)) {
                    {
                        setState(62);
                        _errHandler.sync(this);
                        switch (_input.LA(1)) {
                            case STRING:
                            case NUMBER:
                            case FALSE:
                            case FROM:
                            case IMPORT:
                            case NONE:
                            case NOT:
                            case RETURN:
                            case TRUE:
                            case NAME:
                            case ELLIPSIS:
                            case OPEN_PAREN:
                            case OPEN_BRACK:
                            case ADD:
                            case MINUS:
                            case NOT_OP:
                            case OPEN_BRACE: {
                                setState(60);
                                simple_stmts();
                            }
                                break;
                            case DEF:
                            case FOR:
                            case IF:
                            case WHILE: {
                                setState(61);
                                compound_stmt();
                            }
                                break;
                            default:
                                throw new NoViableAltException(this);
                        }
                    }
                    setState(66);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(67);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Simple_stmtsContext extends ParserRuleContext {
        public List<Simple_stmtContext> simple_stmt() {
            return getRuleContexts(Simple_stmtContext.class);
        }

        public Simple_stmtContext simple_stmt(int i) {
            return getRuleContext(Simple_stmtContext.class, i);
        }

        public TerminalNode NEWLINE() {
            return getToken(Python3Parser.NEWLINE, 0);
        }

        public List<TerminalNode> SEMI_COLON() {
            return getTokens(Python3Parser.SEMI_COLON);
        }

        public TerminalNode SEMI_COLON(int i) {
            return getToken(Python3Parser.SEMI_COLON, i);
        }

        public Simple_stmtsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_simple_stmts;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).enterSimple_stmts(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).exitSimple_stmts(this);
        }
    }

    public final Simple_stmtsContext simple_stmts() throws RecognitionException {
        Simple_stmtsContext _localctx = new Simple_stmtsContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_simple_stmts);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(69);
                simple_stmt();
                setState(74);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(70);
                                match(SEMI_COLON);
                                setState(71);
                                simple_stmt();
                            }
                        }
                    }
                    setState(76);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
                }
                setState(78);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == SEMI_COLON) {
                    {
                        setState(77);
                        match(SEMI_COLON);
                    }
                }

                setState(80);
                match(NEWLINE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Compound_stmtContext extends ParserRuleContext {
        public If_stmtContext if_stmt() {
            return getRuleContext(If_stmtContext.class, 0);
        }

        public While_stmtContext while_stmt() {
            return getRuleContext(While_stmtContext.class, 0);
        }

        public For_stmtContext for_stmt() {
            return getRuleContext(For_stmtContext.class, 0);
        }

        public FuncdefContext funcdef() {
            return getRuleContext(FuncdefContext.class, 0);
        }

        public Compound_stmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_compound_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).enterCompound_stmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).exitCompound_stmt(this);
        }
    }

    public final Compound_stmtContext compound_stmt() throws RecognitionException {
        Compound_stmtContext _localctx = new Compound_stmtContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_compound_stmt);
        try {
            setState(86);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case IF:
                    enterOuterAlt(_localctx, 1); {
                    setState(82);
                    if_stmt();
                }
                    break;
                case WHILE:
                    enterOuterAlt(_localctx, 2); {
                    setState(83);
                    while_stmt();
                }
                    break;
                case FOR:
                    enterOuterAlt(_localctx, 3); {
                    setState(84);
                    for_stmt();
                }
                    break;
                case DEF:
                    enterOuterAlt(_localctx, 4); {
                    setState(85);
                    funcdef();
                }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Simple_stmtContext extends ParserRuleContext {
        public AssignmentContext assignment() {
            return getRuleContext(AssignmentContext.class, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public Return_stmtContext return_stmt() {
            return getRuleContext(Return_stmtContext.class, 0);
        }

        public Import_stmContext import_stm() {
            return getRuleContext(Import_stmContext.class, 0);
        }

        public Simple_stmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_simple_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).enterSimple_stmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).exitSimple_stmt(this);
        }
    }

    public final Simple_stmtContext simple_stmt() throws RecognitionException {
        Simple_stmtContext _localctx = new Simple_stmtContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_simple_stmt);
        try {
            setState(92);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1); {
                    setState(88);
                    assignment();
                }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2); {
                    setState(89);
                    expr(0);
                }
                    break;
                case 3:
                    enterOuterAlt(_localctx, 3); {
                    setState(90);
                    return_stmt();
                }
                    break;
                case 4:
                    enterOuterAlt(_localctx, 4); {
                    setState(91);
                    import_stm();
                }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AssignmentContext extends ParserRuleContext {
        public List<ExprlistContext> exprlist() {
            return getRuleContexts(ExprlistContext.class);
        }

        public ExprlistContext exprlist(int i) {
            return getRuleContext(ExprlistContext.class, i);
        }

        public AugassignContext augassign() {
            return getRuleContext(AugassignContext.class, 0);
        }

        public AssignmentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_assignment;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).enterAssignment(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).exitAssignment(this);
        }
    }

    public final AssignmentContext assignment() throws RecognitionException {
        AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_assignment);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(94);
                exprlist();
                setState(95);
                augassign();
                setState(96);
                exprlist();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Return_stmtContext extends ParserRuleContext {
        public TerminalNode RETURN() {
            return getToken(Python3Parser.RETURN, 0);
        }

        public ExprlistContext exprlist() {
            return getRuleContext(ExprlistContext.class, 0);
        }

        public Return_stmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_return_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).enterReturn_stmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).exitReturn_stmt(this);
        }
    }

    public final Return_stmtContext return_stmt() throws RecognitionException {
        Return_stmtContext _localctx = new Return_stmtContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_return_stmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(98);
                match(RETURN);
                setState(100);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3483530435101720L) != 0)) {
                    {
                        setState(99);
                        exprlist();
                    }
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Import_stmContext extends ParserRuleContext {
        public TerminalNode IMPORT() {
            return getToken(Python3Parser.IMPORT, 0);
        }

        public Dotted_nameContext dotted_name() {
            return getRuleContext(Dotted_nameContext.class, 0);
        }

        public TerminalNode AS() {
            return getToken(Python3Parser.AS, 0);
        }

        public List<TerminalNode> NAME() {
            return getTokens(Python3Parser.NAME);
        }

        public TerminalNode NAME(int i) {
            return getToken(Python3Parser.NAME, i);
        }

        public TerminalNode FROM() {
            return getToken(Python3Parser.FROM, 0);
        }

        public TerminalNode STAR() {
            return getToken(Python3Parser.STAR, 0);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(Python3Parser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(Python3Parser.COMMA, i);
        }

        public Import_stmContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_import_stm;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).enterImport_stm(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).exitImport_stm(this);
        }
    }

    public final Import_stmContext import_stm() throws RecognitionException {
        Import_stmContext _localctx = new Import_stmContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_import_stm);
        int _la;
        try {
            setState(122);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case IMPORT:
                    enterOuterAlt(_localctx, 1); {
                    setState(102);
                    match(IMPORT);
                    setState(103);
                    dotted_name();
                    setState(106);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == AS) {
                        {
                            setState(104);
                            match(AS);
                            setState(105);
                            match(NAME);
                        }
                    }
                }
                    break;
                case FROM:
                    enterOuterAlt(_localctx, 2); {
                    setState(108);
                    match(FROM);
                    setState(109);
                    dotted_name();
                    setState(110);
                    match(IMPORT);
                    setState(120);
                    _errHandler.sync(this);
                    switch (_input.LA(1)) {
                        case NAME: {
                            setState(111);
                            match(NAME);
                            setState(116);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            while (_la == COMMA) {
                                {
                                    {
                                        setState(112);
                                        match(COMMA);
                                        setState(113);
                                        match(NAME);
                                    }
                                }
                                setState(118);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            }
                        }
                            break;
                        case STAR: {
                            setState(119);
                            match(STAR);
                        }
                            break;
                        default:
                            throw new NoViableAltException(this);
                    }
                }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Dotted_nameContext extends ParserRuleContext {
        public List<TerminalNode> NAME() {
            return getTokens(Python3Parser.NAME);
        }

        public TerminalNode NAME(int i) {
            return getToken(Python3Parser.NAME, i);
        }

        public List<TerminalNode> DOT() {
            return getTokens(Python3Parser.DOT);
        }

        public TerminalNode DOT(int i) {
            return getToken(Python3Parser.DOT, i);
        }

        public Dotted_nameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dotted_name;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).enterDotted_name(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).exitDotted_name(this);
        }
    }

    public final Dotted_nameContext dotted_name() throws RecognitionException {
        Dotted_nameContext _localctx = new Dotted_nameContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_dotted_name);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(124);
                match(NAME);
                setState(129);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == DOT) {
                    {
                        {
                            setState(125);
                            match(DOT);
                            setState(126);
                            match(NAME);
                        }
                    }
                    setState(131);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class FuncdefContext extends ParserRuleContext {
        public TerminalNode DEF() {
            return getToken(Python3Parser.DEF, 0);
        }

        public TerminalNode NAME() {
            return getToken(Python3Parser.NAME, 0);
        }

        public TerminalNode OPEN_PAREN() {
            return getToken(Python3Parser.OPEN_PAREN, 0);
        }

        public TerminalNode CLOSE_PAREN() {
            return getToken(Python3Parser.CLOSE_PAREN, 0);
        }

        public TerminalNode COLON() {
            return getToken(Python3Parser.COLON, 0);
        }

        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        public ParamlistContext paramlist() {
            return getRuleContext(ParamlistContext.class, 0);
        }

        public FuncdefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_funcdef;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).enterFuncdef(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof Python3ParserListener)
                ((Python3ParserListener) listener).exitFuncdef(this);
        }
    }

    public final FuncdefContext funcdef() throws RecognitionException {
        FuncdefContext _localctx = new FuncdefContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_funcdef);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(132);
                match(DEF);
                setState(133);
                match(NAME);
                setState(134);
                match(OPEN_PAREN);
                setState(136);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == NAME) {
                    {
                        setState(135);
                        paramlist();
                    }
                }

                setState(138);
                match(CLOSE_PAREN);
                setState(139);
                match(COLON);
                setState(140);
                block();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ParamlistContext extends ParserRuleContext {
        public List<ParamdefContext> paramdef() {
            return getRuleContexts(ParamdefContext.class);
        }

        public ParamdefContext paramdef(int i) {
            return getRuleContext(ParamdefContext.class, i);
        }

        public List<TerminalNode> ASSIGN() {
            return getTokens(Python3Parser.ASSIGN);
        }

        public TerminalNode ASSIGN(int i) {
            return getToken(Python3Parser.ASSIGN, i);
        }

        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(Python3Parser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(Python3Parser.COMMA, i);
        }

        public ParamlistContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_paramlist;
        }
